# rzhaka

./: .gitignore  CMakeLists.txt  listener.cpp  listener.hpp  main.cpp  widget.cpp  widget.h  widget.hpp
backend/: .gitignore  CMakeLists.txt  README.md  baza.h  build.sh  err.txt  hexagons.labhex  lab.h  liba.h  liba.hpp  main.cpp  parser.cc  parser.y  scanner.hh  scanner.hpp  scanner.l  unit_moving  vars.h
backend/ast/: ast.hpp
backend/runtime/: CMakeLists.txt  baza.hpp  runtime.cpp  runtime.h  runtime.hpp  vars.hpp
backend/unitTests/: input  input_go  unit_input
